<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Autonomous robot bringup package with LiDAR + IMU + SLAM + Mission Control</description>
  <maintainer email="clintosabi283@gmail.com">pi</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Navigation stack -->
  <depend>nav2_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <!-- SLAM and Localization -->
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>

  <!-- Hardware interfaces -->
  <depend>rplidar_ros</depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>

  <!-- Your custom packages -->
  <depend>motor_control_pkg</depend>
  <depend>imu_mpu6050</depend>
  <depend>rocker_bogie_description</depend>

  <!-- Testing -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
